--- a/KM/Dictionary/Bioinfo dictionary ja/Bioinfo terms/ゲノム.md
+++ b/KM/Dictionary/Bioinfo dictionary ja/Bioinfo terms/ゲノム.md
@@ -8,10 +8,12 @@ source:: -
 definition:: 遺伝子と染色体から合成された言葉で、DNAのすべての遺伝情報のことです。
 ---
 >[!note] 意味
->遺伝子と染色体から合成された言葉で、DNAのすべての遺伝情報のことです。
+>[[遺伝子]]と染色体から合成された言葉で、DNAのすべての遺伝情報のことです。
 >
 
 >[!example]+ English Translation
 > 
 [[genome]] 
 
+>[!info]+ RELATED TERMS
+> [[ゲノム]]
