--- a/KM/Dictionary/Bioinfo dictionary ja/Bioinfo terms/セントラルドグマ.md
+++ b/KM/Dictionary/Bioinfo dictionary ja/Bioinfo terms/セントラルドグマ.md
@@ -5,16 +5,19 @@ roots: []
 alphabet:: サ行
 language:: ja
 source:: -
-definition:: 遺伝情報は「DNA → RNA → タンパク質」の順に伝達される、という、分子生物学の概念である。
+definition:: 遺伝情報は「DNA→（転写）→mRNA→（翻訳）→タンパク質」の順に伝達される、という、分子生物学の概念である。
 ---
 
 >[!note] 意味
->遺伝情報は「DNA → mRNA → タンパク質」の順に伝達される、という、分子生物学の概念である。
+>遺伝情報は「DNA→（転写）→mRNA→（翻訳）→タンパク質」の順に伝達される、という、分子生物学の概念である。
 
 >[!example]+ English Translation 
 [[central dogma]] 
 
 >[!info]+ RELATED TERMS
 > [[DNA]] → [[RNA]] → [[タンパク質]]
+
+>[!faq]+ IMAGE
+> ![image](central-dogma.jpg)
 
 ---
